# CADFire

./: .gitignore  CLAUDE.md  PROGRESS.md  README.md  config.json  diagnose_tasks.py  pyproject.toml  requirements.txt  train.ipynb  train.py
cadfire/: __init__.py
cadfire/engine/: __init__.py  cad_engine.py  geometry.py
cadfire/env/: __init__.py  cad_env.py
cadfire/export/: __init__.py  dxf_writer.py
cadfire/model/: __init__.py  action_heads.py  cad_agent.py  fusion.py  spectral_encoder.py  text_encoder.py  vision_encoder.py
cadfire/renderer/: __init__.py  rasterizer.py
cadfire/tasks/: __init__.py  base.py  draw_tasks.py  modify_tasks.py  registry.py  select_tasks.py  trace_tasks.py  view_tasks.py
cadfire/tasks/pretrain/: __init__.py  array_ops.py  conditional.py  control.py  delete.py  draw_point.py  geometry_ops.py  move.py  multiturn.py  point_precision.py  pretrain_select_tasks.py  rotate.py  select.py  style.py  transform_extra.py
cadfire/tasks/supervised/: __init__.py  conditional.py  copy_paste.py  delete.py  (+8 more)
cadfire/tokenizer/: __init__.py  bpe.py
cadfire/training/: __init__.py  checkpoint.py  diagnostics.py  ppo.py  pretrain_cursor.py  pretrain_semantic.py  pretrain_teacher.py  pretrain_tools.py  rollout.py  supervised_diagnostics.py
cadfire/ui/: __init__.py  app.py  controller.py
cadfire/utils/: color_utils.py  config.py  draw_utils.py  vocab_tracker.py
scripts/: demo.py  diagnose_tasks.py
tests/: test_engine.py  test_env.py  test_export.py  test_model.py  test_renderer.py  test_supervised_diagnostics.py  test_tasks.py  test_tokenizer.py
(+5 files in other folders)
