[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "cadfire"
version = "0.1.0"
description = "RL-based CAD drafting agent"
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.24",
    "torch>=2.0",
]

[project.optional-dependencies]
dev = ["pytest>=7.0", "matplotlib"]

[tool.setuptools.packages.find]
include = ["cadfire*"]
